audioresample: Don't produce more data than expected in GAP mode

Due to rounding errors in combination with rate changes, we might otherwise
end up producing too much and run into an assertion later.

This is not a problem with the new audioresample in GIT master.

https://bugzilla.gnome.org/show_bug.cgi?id=768836